@@ -1,3 +1,11 @@
+2006-08-19  Robert Millan  <rmh@aybabtu.com>
+
+	* util/i386/pc/grub-install.in: Skip menu.lst when removing
+	/boot/grub/*.lst.
+	* util/i386/pc/getroot.c: Don't recurse into dotdirs (e.g. ".static").
+	* util/i386/pc/grub-mkdevicemap.c: Make sure the floppy device exists
+	before adding it to device.map.
+
 2006-08-15  Johan Rydberg  <jrydberg@gnu.org>
 
 	* genmk.rb: Let GCC generate dependenceies the first time it
